<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="64dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_ketJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_judul"
        android:layout_below="@+id/tv_judul"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="72dp"
        android:justificationMode="inter_word"/>

    <Button
        android:id="@+id/btn_kemerdekaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kemerdekaan_indonesia"
        android:layout_below="@+id/tv_ketJudul"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:backgroundTint="#F3BE2F"/>

    <Button
        android:id="@+id/btn_islam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/islam"
        android:layout_below="@+id/btn_kemerdekaan"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:backgroundTint="#F3BE2F"/>

    <Button
        android:id="@+id/btn_hindu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hindu"
        android:layout_below="@+id/btn_islam"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:backgroundTint="#F3BE2F"/>

    <Button
        android:id="@+id/btn_buddha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/budha"
        android:layout_below="@+id/btn_hindu"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:backgroundTint="#F3BE2F"/>

    <Button
        android:id="@+id/btn_kristen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kristen"
        android:layout_below="@+id/btn_buddha"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:backgroundTint="#F3BE2F"/>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:textSize="12sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_copyright"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_baseline_info_24"
        android:backgroundTint="#F3BE2F"
        app:tint="@color/white"
        android:clipToOutline="true"
        app:backgroundTint="#F3BE2F"
        android:contentDescription="@string/img_desc"/>

</RelativeLayout>